--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/IMG_1159.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
+					<h1 id="logo"><a href="#">Lauren Hoyns</a></h1>
 					<p>I got reprogrammed by a rogue AI<br />
 					and now I'm totally cray</p>
 				</header>
