--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/IMG_1159.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/Pickles.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Lauren Hoyns</a></h1>
 					<p>I got reprogrammed by a rogue AI<br />
 					and now I'm totally cray</p>
