--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/Pickles.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Lauren Hoyns</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
+					<p>Just a college senior exploring mental health and self care<br />
 					and now I'm totally cray</p>
 				</header>
 				<nav id="nav">
