--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#two">Podcast</a></li>
+						<li><a href="#three">Blog Posts</a></li>
 						<li><a href="#four">Contact</a></li>
+						<li><a href="#five">Video</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -55,7 +56,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 										<p>Hello I am Lauren<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										</a>.</p>
 									</header>
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 								</div>
@@ -123,6 +124,18 @@
 									</form>
 								</div>
 							</section>
+							<!-- Five -->
+								<section id="Five">
+									<div class="container">
+										<h3>Video</h3>
+										<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/v11awwrSbWU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+													</ul>
+												</div>
+											</div>
+										</form>
+									</div>
+								</section>
 
 						<!-- Five -->
 						<!--
