--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Podcast</a></li>
 						<li><a href="#three">Blog Posts</a></li>
-						<li><a href="#four">Contact</a></li>
-						<li><a href="#five">Video</a></li>
+						<li><a href="#four">Video</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -108,34 +107,14 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/v11awwrSbWU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 												</ul>
 											</div>
 										</div>
 									</form>
 								</div>
 							</section>
-							<!-- Five -->
-								<section id="Five">
-									<div class="container">
-										<h3>Video</h3>
-										<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/v11awwrSbWU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-													</ul>
-												</div>
-											</div>
-										</form>
-									</div>
-								</section>
+
 
 						<!-- Five -->
 						<!--
