--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h3>Blog Posts</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
+												<h4><a href= "https://medium.com/@laurenhoyns/deleting-my-connections-lessons-ive-learned-from-deleting-all-social-media-platforms-before-6d4ac01a3444Possibly"> Deletting my connections: Lessons I've learned from Deleting all Social Media Platforms Before College</a></h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
