--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
+												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e" They All said that They Use a Planner: Time Management Advice from College Females</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
