--- a/index.html
+++ b/index.html
@@ -78,21 +78,14 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><a href= "https://medium.com/@laurenhoyns/deleting-my-connections-lessons-ive-learned-from-deleting-all-social-media-platforms-before-6d4ac01a3444Possibly"> Deletting my connections: Lessons I've learned from Deleting all Social Media Platforms Before College</a></h4>
+												<h4><a href= "https://medium.com/@laurenhoyns/deleting-my-connections-lessons-ive-learned-from-deleting-all-social-media-platforms-before-6d4ac01a3444"> Deletting my connections: Lessons I've learned from Deleting all Social Media Platforms Before College</a></h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e" They All said that They Use a Planner: Time Management Advice from College Females</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
+												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e"> They All said that They Use a Planner: Time Management Advice from College Females</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
