--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 						<li><a href="#two">Podcast</a></li>
 						<li><a href="#three">Blog Posts</a></li>
 						<li><a href="#four">Video</a></li>
+						<li><a href="#five">Need Support?</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -56,7 +57,7 @@
 										<h2>About Me</h2>
 										<p>Hello I am Lauren</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I am a senior majoring in English.</p>
 								</div>
 							</section>
 
@@ -79,14 +80,14 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4><a href= "https://medium.com/@laurenhoyns/deleting-my-connections-lessons-ive-learned-from-deleting-all-social-media-platforms-before-6d4ac01a3444"> Deletting my connections: Lessons I've learned from Deleting all Social Media Platforms Before College</a></h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>All of the things that I learned from deleting my social media in high school.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e"> They All said that They Use a Planner: Time Management Advice from College Females</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Interviewing my closest friends about their most effective time management strategies.</p>
 											</div>
 										</article>
 									</div>
@@ -105,6 +106,19 @@
 									</form>
 								</div>
 							</section>
+
+							<!-- Five -->
+								<section id="five">
+									<div class="container">
+										<h3>Video - Escaping Digital Woes</h3>
+										<p>Click to see our self care methods for navigating college.</p>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/v11awwrSbWU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+													</ul>
+												</div>
+											</div>
+										</form>
+									</div>
+								</section>
 
 
 						<!-- Five -->
