--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
 							<!-- Five -->
 							<section id="five">
 								<div class="container">
-										<h3>Text 741174</h3>
-										<p>Click to see our self care methods for navigating college.</p>
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/v11awwrSbWU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<h3>Text 741174 to speak with a trained crisis counselor</h3>
+										<p>C<a href="https://www.crisistextline.org/"> Crisis Text Line</p>
 													</ul>
 												</div>
 											</div>
