--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<section id="five">
 								<div class="container">
 										<h3>Text 741174 to speak with a trained crisis counselor</h3>
-										<p>C<a href="https://www.crisistextline.org/"> Crisis Text Line</p>
+										<p><a href="https://www.crisistextline.org/"> Crisis Text Line</p>
 													</ul>
 												</div>
 											</div>
