I tried to get rid of the link in the description

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Video - Escaping Digital Woes</h3>
-									<p>Click to see our self care methods for navigating college.</p>
+									<p>A video about our favorite self care methods during college.</p>
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/v11awwrSbWU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 												</ul>
 											</div>
