--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e"> They All said that They Use a Planner: Time Management Advice from College Females</h4>
+												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e"> They All said that They Use a Planner: Time Management Advice from College Females</a></h4>
 												<p>Interviewing my closest friends about their most effective time management strategies.</p>
 											</div>
 										</article>
