--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<div class="container">
 									<h3>Video - Escaping Digital Woes</h3>
 									<p>A video about our favorite self care methods during college.</p>
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/v11awwrSbWU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/v11awwrSbWU' frameborder='0' allowfullscreen></iframe></div>
 												</ul>
 											</div>
 										</div>
