editing a ton of descriptions for website

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>Hello I am Lauren</p>
+										<p>My name is Lauren Hoyns and I am a senior majoring in English (Pre-Law) and Creative Writing with a minor in Sociology. My college experiences have taught me the importance of taking care of yourself and taking the time to disconnect from social media. I hope this website gives you some helpful tips on how to navigate your mental health and social media usage during college.</p>
 									</header>
 									<p>I am a senior majoring in English.</p>
 								</div>
@@ -79,15 +79,15 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><a href= "https://medium.com/@laurenhoyns/deleting-my-connections-lessons-ive-learned-from-deleting-all-social-media-platforms-before-6d4ac01a3444"> Deletting my connections: Lessons I've learned from Deleting all Social Media Platforms Before College</a></h4>
-												<p>All of the things that I learned from deleting my social media in high school.</p>
+												<h4><a href= "https://medium.com/@laurenhoyns/deleting-my-connections-lessons-ive-learned-from-deleting-all-social-media-platforms-before-6d4ac01a3444"> Deletting my connections: lessons I've learned from deleting all social media platforms before college</a></h4>
+												<p>Not having a social media in college taught me a lot of important lessons. Click the link to read about some of the things I've learned from not being on social media in college.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e"> They All said that They Use a Planner: Time Management Advice from College Females</a></h4>
-												<p>Interviewing my closest friends about their most effective time management strategies.</p>
+												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e"> They all said they use a planner: time management strategies from three college females</a></h4>
+												<p>I have always struggled with time management. Click the link to hear some helpful tips that my most organized college friends shared with me.</p>
 											</div>
 										</article>
 									</div>
