--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 									<h3>Blog Posts</h3>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="IMG_2931.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><a href= "https://medium.com/@laurenhoyns/deleting-my-connections-lessons-ive-learned-from-deleting-all-social-media-platforms-before-6d4ac01a3444"> Deletting my connections: lessons I've learned from deleting all social media platforms before college</a></h4>
+												<h4><a href= "https://medium.com/@laurenhoyns/deleting-my-connections-lessons-ive-learned-from-deleting-all-social-media-platforms-before-6d4ac01a3444"> Deleting my connections: lessons I've learned from deleting all social media platforms before college</a></h4>
 												<p>Not having a social media in college taught me a lot of important lessons. Click the link to read about some of the things I've learned from not being on social media in college.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="IMG_4289.jpg" alt="" /></a>
 											<div class="inner">
 												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e"> They all said they use a planner: time management strategies from three college females</a></h4>
 												<p>I have always struggled with time management. Click the link to hear some helpful tips that my most organized college friends shared with me.</p>
