I added descriptions and stuff

--- a/index.html
+++ b/index.html
@@ -30,15 +30,6 @@
 						<li><a href="#five">Need Support?</a></li>
 					</ul>
 				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer>
 			</section>
 
 		<!-- Wrapper -->
@@ -64,7 +55,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Digital Woes Podcasts</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Social media can have a big impact on the ways we view ourselves and our relationships with others. In this podcast, my friends and I discuss the ways we use/do not use social media and some of the negative and positive things we've learned from these online spaces.</p>
 									<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/721831534&color=%2300ffa3&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 									</ul>
 								</div>
@@ -113,7 +104,7 @@
 									<div class="container">
 										<h3>In need of support or looking for a meaningful volunteer opportunity?</h3>
 										<div class="features">
-										<p>Text HOME at <a href="https://www.crisistextline.org/texting-in"> 741741</a> to speak with a trained crisis counselor or <a href="https://www.crisistextline.org/volunteer"> volunteer</a> to support individuals in crisis.</p>
+										<p>Text HOME to <a href="https://www.crisistextline.org/texting-in"> 741741</a> to speak with a trained crisis counselor or <a href="https://www.crisistextline.org/volunteer"> volunteer</a> to support individuals in crisis.</p>
 										<div class="inner">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/KOtFDsC8JC0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 													</ul>
