--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										<div class="features">
 										<p>Text HOME to <a href="https://www.crisistextline.org/texting-in"> 741741</a> to speak with a trained crisis counselor or <a href="https://www.crisistextline.org/volunteer"> volunteer</a> to support individuals in crisis.</p>
 										<div class="inner">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/KOtFDsC8JC0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/KOtFDsC8JC0#action=share' frameborder='0' allowfullscreen></iframe></div>
 													</ul>
 												</div>
 											</div>
