--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 											<a href="#" class="image"><img src="images/IMG_4289.jpg" alt="" /></a>
 											<div class="inner">
 												<h4><a href="https://medium.com/@laurenhoyns/they-all-said-that-they-use-a-planner-time-management-advice-from-some-college-females-c8ffc6e2870e"> They all said they use a planner: time management strategies from three college females</a></h4>
-												<p>I have always struggled with time management. Click the link to hear some helpful tips that my most organized college friends shared with me.</p>
+												<p>I have always struggled with time management. Click the link to read some helpful tips that my most organized college friends shared with me.</p>
 											</div>
 										</article>
 									</div>
