added descriptions to the video

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<div class="container">
 									<h3>Video - Escaping Digital Woes</h3>
 									<div class="features">
-									<p>A video about our favorite self care methods during college.</p>
+									<p>Self care in college is one of the most important things you need to be doing. Click to see the little things my friends and I do to take care of ourselves in college.</p>
 									<div class="inner">
 				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/v11awwrSbWU' frameborder='0' allowfullscreen></iframe></div>
 												</ul>
